project/error
In file included from led.c:2:
led.h: In function 'led_init':
led.h:16:3: warning: implicit declaration of function 'led_update'; did you mean 'led_init'? [-Wimplicit-function-declaration]
   led_update();
   ^~~~~~~~~~
   led_init
led.h: At top level:
led.h:19:6: warning: conflicting types for 'led_update'
 void led_update()
      ^~~~~~~~~~
led.h:16:3: note: previous implicit declaration of 'led_update' was here
   led_update();
   ^~~~~~~~~~
led.c:4:15: error: redefinition of 'red_on'
 unsigned char red_on = 0, green_on = 0;
               ^~~~~~
In file included from led.c:2:
led.h:7:15: note: previous definition of 'red_on' was here
 unsigned char red_on = 0, green_on = 0;
               ^~~~~~
led.c:4:27: error: redefinition of 'green_on'
 unsigned char red_on = 0, green_on = 0;
                           ^~~~~~~~
In file included from led.c:2:
led.h:7:27: note: previous definition of 'green_on' was here
 unsigned char red_on = 0, green_on = 0;
                           ^~~~~~~~
led.c:5:15: error: redefinition of 'led_changed'
 unsigned char led_changed = 0;
               ^~~~~~~~~~~
In file included from led.c:2:
led.h:8:15: note: previous definition of 'led_changed' was here
 unsigned char led_changed = 0;
               ^~~~~~~~~~~
led.c:7:13: error: redefinition of 'redVal'
 static char redVal[] = {0, LED_RED}, greenVal[] = {0, LED_GREEN};
             ^~~~~~
In file included from led.c:2:
led.h:10:13: note: previous definition of 'redVal' was here
 static char redVal[] = {0, LED_RED}, greenVal[] = {0, LED_GREEN};
             ^~~~~~
led.c:7:38: error: redefinition of 'greenVal'
 static char redVal[] = {0, LED_RED}, greenVal[] = {0, LED_GREEN};
                                      ^~~~~~~~
In file included from led.c:2:
led.h:10:38: note: previous definition of 'greenVal' was here
 static char redVal[] = {0, LED_RED}, greenVal[] = {0, LED_GREEN};
                                      ^~~~~~~~
led.c:9:6: error: redefinition of 'led_init'
 void led_init()
      ^~~~~~~~
In file included from led.c:2:
led.h:12:6: note: previous definition of 'led_init' was here
 void led_init()
      ^~~~~~~~
led.c:17:6: error: redefinition of 'led_update'
 void led_update()
      ^~~~~~~~~~
In file included from led.c:2:
led.h:19:6: note: previous definition of 'led_update' was here
 void led_update()
      ^~~~~~~~~~
make: *** [<builtin>: led.o] Error 1
